--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -4,5 +4,6 @@
   <a routerLink="/drinks">Drinks</a>
   <a routerLink="/ingredients">Ingredients</a>
 </nav>
+<a><img src="https://i.ibb.co/Sx03g2r/IMG-9768.png" alt="IMG-9768"  class="center"></a>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
