--- a/angular-app/src/app/app.component.css
+++ b/angular-app/src/app/app.component.css
@@ -1,8 +1,10 @@
 /* AppComponent's private CSS styles */
 h1 {
-    font-size: 1.2em;
-    color: #999;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 4em;
+    color: rgb(0, 0, 0);
     margin-bottom: 0;
+    text-align: center;
   }
   h2 {
     font-size: 2em;
@@ -10,20 +12,33 @@ h1 {
     padding-top: 0;
   }
   nav a {
-    padding: 5px 10px;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 10px 10px;
     text-decoration: none;
-    margin-top: 10px;
+    margin-top: 30px;
     display: inline-block;
-    background-color: #eee;
-    border-radius: 4px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+    
   }
   nav a:visited, a:link {
-    color: #607d8b;
+    color: #f1f5f7;
   }
   nav a:hover {
-    color: #039be5;
-    background-color: #cfd8dc;
+    color: #070707;
+    background-color: #4e9bc2;
   }
   nav a.active {
-    color: #039be5;
+    color: #616263;
+  }
+  body {
+    background-color: grey;
+  }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    position: relative;
+    top: -150px;
   }
