--- a/angular-app/src/app/dashboard/dashboard.component.css
+++ b/angular-app/src/app/dashboard/dashboard.component.css
@@ -31,16 +31,16 @@
   .module {
     padding: 20px;
     text-align: center;
-    color: #eee;
+    color: rgb(7, 7, 7);
     max-height: 120px;
     min-width: 120px;
-    background-color: #607d8b;
+    background-color: #0c0c0c;
     border-radius: 2px;
   }
   .module:hover {
-    background-color: #eee;
+    background-color: rgb(7, 7, 7);
     cursor: pointer;
-    color: #607d8b;
+    color: #000000;
   }
   .grid-pad {
     padding: 10px 0;
@@ -61,3 +61,4 @@
       min-width: 60px;
     }
   }
+
