--- a/angular-app/src/app/drink-detail/drink-detail.component.css
+++ b/angular-app/src/app/drink-detail/drink-detail.component.css
@@ -1,9 +1,9 @@
-/* HeroDetailComponent's private CSS styles */
+/* DrinkDetailComponent's private CSS styles */
 label {
     display: inline-block;
     width: 3em;
     margin: .5em 0;
-    color: #607D8B;
+    color: rgb(2, 2, 2);
     font-weight: bold;
   }
   input {
@@ -14,7 +14,7 @@ label {
   button {
     margin-top: 20px;
     font-family: Arial;
-    background-color: #eee;
+    background-color: rgb(0, 0, 0);
     border: none;
     padding: 5px 10px;
     border-radius: 4px;
@@ -22,10 +22,10 @@ label {
     cursor: hand;
   }
   button:hover {
-    background-color: #cfd8dc;
+    background-color: #000000;
   }
   button:disabled {
-    background-color: #eee;
+    background-color: rgb(10, 10, 10);
     color: #ccc;
     cursor: auto;
   }
