--- a/angular-app/src/app/drink-search/drink-search.component.css
+++ b/angular-app/src/app/drink-search/drink-search.component.css
@@ -27,10 +27,11 @@
   .search-result li a:active {
     color: white;
   }
-  #search-box {
+  /* #search-box {
     width: 200px;
     height: 20px;
-  }
+    
+  } */
   
   
   ul.search-result {
