--- a/angular-app/src/app/drink-search/drink-search.component.html
+++ b/angular-app/src/app/drink-search/drink-search.component.html
@@ -1,7 +1,7 @@
 <div id="search-component">
-  <h4>Drink Search</h4>
+  <h4></h4>
 
-  <input #searchBox id="search-box" (input)="search(searchBox.value)" />
+  <!---<input #searchBox id="search-box" (input)="search(searchBox.value)" /> -->
 
   <ul class="search-result">
     <li *ngFor="let drink of drinks$ | async" >
