api database setup

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -7,3 +7,4 @@
 <a><img src="https://i.ibb.co/Sx03g2r/IMG-9768.png" alt="IMG-9768"  class="center"></a>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
+<app-ingredient-form></app-ingredient-form>
