--- a/angular-app/src/app/dashboard/dashboard.component.html
+++ b/angular-app/src/app/dashboard/dashboard.component.html
@@ -7,5 +7,5 @@
     </div>
   </a>
 </div>
-
+<a><img src="https://i.ibb.co/Sx03g2r/IMG-9768.png" alt="IMG-9768"  class="center"></a>
 <app-drink-search></app-drink-search>
