--- a/angular-app/src/app/drink-detail/drink-detail.component.html
+++ b/angular-app/src/app/drink-detail/drink-detail.component.html
@@ -1,11 +1,4 @@
-<div *ngIf="drink">
-  <h2>{{drink.drinkName | uppercase}} Details</h2>
-  <div><span>id: </span>{{drink.drinkId}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="drink.drinkName" placeholder="name"/>
-    </label>
-  </div>
-  <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
-</div>
+<u><h4>Gin and tonic Instuctiions</h4></u>
+<h5>
+    Mix gin with tonic water
+</h5>
