--- a/angular-app/src/app/ingredient-form/ingredient-form.component.html
+++ b/angular-app/src/app/ingredient-form/ingredient-form.component.html
@@ -9,7 +9,7 @@
       {{musicPreferences[i].genre}}
     </label>
   
-    <button>submit</button>
+    <!--<button>submit</button>-->
   </form>
 </div>
 
