--- a/angular-app/src/app/ingredient-search/ingredient-search.component.html
+++ b/angular-app/src/app/ingredient-search/ingredient-search.component.html
@@ -1,4 +1,8 @@
-<div id="search-component">
+<u><h4>Vodka and Lemonade Instuctiions</h4></u>
+<h5>
+    Mix vodka with lemonade
+</h5>
+<!----<div id="search-component">
   <h4>Ingredient Search</h4>
 
   <input #searchBox id="search-box" (input)="search(searchBox.value)" />
@@ -9,4 +13,4 @@
     </li>
     
   </ul>
-</div>
+</div>--->
