--- a/angular-app/src/app/app.component.css
+++ b/angular-app/src/app/app.component.css
@@ -7,9 +7,18 @@ h1 {
     text-align: center;
   }
   h2 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 3em;
+    margin-top: 0;
+    padding-top: 0;
+    text-align: center;
+  }
+  h3 {
+    font-family: 'Courier New', Courier, monospace;
     font-size: 2em;
     margin-top: 0;
     padding-top: 0;
+    
   }
   nav a {
     font-family: 'Courier New', Courier, monospace;
@@ -40,5 +49,6 @@ h1 {
     margin-right: auto;
     width: 50%;
     position: relative;
-    top: -150px;
+    top: -200px;
   }
+  
