--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,10 +1,19 @@
 <h1>{{title}}</h1>
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/drinks">Drinks</a>
   <a routerLink="/ingredients">Ingredients</a>
+  <a routerLink="/drinks">Submit</a>
 </nav>
-<a><img src="https://i.ibb.co/Sx03g2r/IMG-9768.png" alt="IMG-9768"  class="center"></a>
+<!--<p>
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+</p>-->
+
+
 <router-outlet></router-outlet>
-<app-messages></app-messages>
-<app-ingredient-form></app-ingredient-form>
+<!--<app-messages></app-messages>-->
+
