--- a/angular-app/src/app/drink-detail/drink-detail.component.css
+++ b/angular-app/src/app/drink-detail/drink-detail.component.css
@@ -29,3 +29,18 @@ label {
     color: #ccc;
     cursor: auto;
   }
+
+  h4 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2em;
+    margin-top: 100px;
+    padding-top: 0;
+    text-align: center;
+}
+h5 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1em;
+    margin-top: 0;
+    padding-top: 0;
+    text-align: center;
+  }
