--- a/angular-app/src/app/drink-search/drink-search.component.css
+++ b/angular-app/src/app/drink-search/drink-search.component.css
@@ -38,3 +38,18 @@
     margin-top: 0;
     padding-left: 0;
   }
+
+  h4 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2em;
+    margin-top: 100px;
+    padding-top: 0;
+    text-align: center;
+}
+h5 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1em;
+    margin-top: 0;
+    padding-top: 0;
+    text-align: center;
+  }
