--- a/angular-app/src/app/drink-search/drink-search.component.html
+++ b/angular-app/src/app/drink-search/drink-search.component.html
@@ -1,5 +1,11 @@
 <div id="search-component">
-  <h4></h4>
+<u><h4>Manhatten Instuctiions</h4></u>
+<h5>
+    2 parts bourbon,
+    1 part sweet vermouth,
+    2 dashes angostura bitters,
+    1 dash of orange bitters,
+</h5>
 
   <!---<input #searchBox id="search-box" (input)="search(searchBox.value)" /> -->
 
