--- a/angular-app/src/app/drinks/drinks.component.css
+++ b/angular-app/src/app/drinks/drinks.component.css
@@ -16,13 +16,13 @@
 }
 
 .drinks li:hover {
-  color: #607D8B;
+  color: rgb(0, 0, 0);
   background-color: #DDD;
   left: .1em;
 }
 
 .drinks a {
-  color: #888;
+  color: rgb(0, 0, 0);
   text-decoration: none;
   position: relative;
   display: block;
@@ -30,7 +30,7 @@
 }
 
 .drinks a:hover {
-  color:#607D8B;
+  color:rgb(2, 2, 2);
 }
 
 .drinks .badge {
@@ -51,17 +51,25 @@
 }
 
 button {
-  background-color: #eee;
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  font-size: .75em;
+  background-color: rgb(0, 2, 3);
   border: none;
-  padding: 5px 10px;
+  padding: 10px 10px;
   border-radius: 4px;
   cursor: pointer;
   cursor: hand;
-  font-family: Arial;
-}
+  }
+  #wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
 button:hover {
-  background-color: #cfd8dc;
+  background-color: #4895b6;
+  color: black;
 }
 
 button.delete {
@@ -70,4 +78,24 @@ button.delete {
   top: -32px;
   background-color: gray !important;
   color: white;
+}
+nav b {
+  /* font-family: 'Courier New', Courier, monospace;
+  padding: 10px 10px;
+  text-decoration: none;
+  margin-top: 30px;
+  display: inline-block;
+  background-color: rgb(0, 0, 0);
+  border-radius: 10px; */
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  font-size: .75em;
+  background-color: rgb(0, 2, 3);
+  border: none;
+  padding: 10px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  cursor: hand;
+  display: block;
+  text-align: center;
 }
