--- a/angular-app/src/app/drink-search/drink-search.component.html
+++ b/angular-app/src/app/drink-search/drink-search.component.html
@@ -1,10 +1,10 @@
 <div id="search-component">
-<u><h4>Manhatten Instuctiions</h4></u>
+<u><h4>Manhatten Instuctions</h4></u>
 <h5>
     2 parts bourbon,
     1 part sweet vermouth,
     2 dashes angostura bitters,
-    1 dash of orange bitters,
+    1 dash of orange bitters
 </h5>
 
   <!---<input #searchBox id="search-box" (input)="search(searchBox.value)" /> -->
