--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -20,10 +20,7 @@
 
 
 <router-outlet></router-outlet>
-<app-messages></app-messages>
-<<<<<<< HEAD
-<app-ingredient-form></app-ingredient-form>
-=======
+<!---<app-messages></app-messages>
 
  
->>>>>>> 7fd0719c1d4e9630e39ea763e8bdee32bc79231c
+-->
