--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -20,7 +20,6 @@
 
 
 <router-outlet></router-outlet>
-<!---<app-messages></app-messages>
-
+<app-messages></app-messages>
+<app-ingredient-form></app-ingredient-form>
  
--->
